tdf#112304 Revert "Watermark: not visible if page background was set"

This reverts commit 39c08074a286855dd014ce1c30b8f7ef95b10242.
Fixed by: I69517efb7d82acd719d6a27a09ba61554dbf1ec9

Change-Id: Icd45b3f55292670ff7338a367eba212453a0687e
Reviewed-on: https://gerrit.libreoffice.org/42155
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>