writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -85,7 +85,7 @@
 #include <comphelper/sequence.hxx>
 #include <comphelper/propertyvalue.hxx>
 #include <unotools/mediadescriptor.hxx>
-#include <editeng/unoprnms.hxx>
+
 
 
 
@@ -2137,14 +2137,6 @@ void DomainMapper_Impl::PopShapeContext()
             catch( const uno::Exception& )
             {
             }
-        }
-        // Move Watermark upper to be visible if page background is set
-        uno::Reference<drawing::XShape> xShape( xObj, uno::UNO_QUERY_THROW );
-        uno::Reference<container::XNamed> xNamed( xShape, uno::UNO_QUERY );
-        if ( xNamed.is() && xNamed->getName().match( "PowerPlusWaterMarkObject" ) )
-        {
-            uno::Reference<beans::XPropertySet> xShapePropertySet( xShape, uno::UNO_QUERY );
-            xShapePropertySet->setPropertyValue( UNO_NAME_MISC_OBJ_LAYERID, uno::makeAny( sal_Int16(1) ) );
         }
         m_aAnchoredStack.pop();
     }
